--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
     </nav>
 
     <!--Main banner picture-->
-    <div class="hero" title="Digital Marketing Meeting"></div>
+    <div class="hero" title="Digital Marketing Meeting, four people at a meeting discussing work "></div>
     <main class="content">
     <!--Added semantic section element-->        
         <section>
         <div id="search-engine-optimization" class="search-engine-optimization">
             <!--Added alt attributes to describe image-->
-            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization"
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook with ideas for 
+            search engine optimization next to a computer, coffee and colored pencils"
             class="float-left"/>
             <h2>Search Engine Optimization</h2>
             <p>
@@ -53,7 +54,8 @@
         <section>
         <div id="online-reputation-management" class="online-reputation-management">
             <!--Added alt attributes to describe image-->
-            <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="Laptop with a chart open 
+            depicting rising reputation" class="float-right"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -65,7 +67,8 @@
         <section>
         <div id="social-media-marketing" class="social-media-marketing">
             <!--Added alt attributes to describe image-->
-            <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="Top down view of meeting with a diverse set of
+            ideas being discussed, mainly social media" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -78,7 +81,7 @@
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <!--Added alt attribute for image-->
-            <img src="./assets/images/lead-generation.png" alt="Lead Generation"/></img>
+            <img src="./assets/images/lead-generation.png" alt="Icon for turning leads into money"/></img>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -86,7 +89,7 @@
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <!--Added alt attribute for image-->
-            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/></img>
+            <img src="./assets/images/brand-awareness.png" alt="Icon for a person with a lightbulb head, symbolizing awareness of an idea"/></img>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -94,7 +97,7 @@
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <!--Added alt attribute for image-->
-            <img src="./assets/images/cost-management.png" alt="Cost Management"></img>
+            <img src="./assets/images/cost-management.png" alt="Icon of gears with money, i.e. cost management"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
